fix: mobile input area hidden behind browser nav bar - use dvh

--- a/apps/client/src/app/pages/chat/chat.component.scss
+++ b/apps/client/src/app/pages/chat/chat.component.scss
@@ -1,6 +1,7 @@
 .chat-layout {
   display: flex;
   height: 100vh;
+  height: 100dvh;
   background: #eae6df;
   color: #111b21;
   font-family: 'Segoe UI', sans-serif;
@@ -723,6 +724,7 @@
   .sidebar {
     width: 100%;
     height: 100vh;
+    height: 100dvh;
     position: absolute;
     top: 0; left: 0;
     z-index: 10;
@@ -732,6 +734,7 @@
   .chat-area {
     width: 100%;
     height: 100vh;
+    height: 100dvh;
     position: absolute;
     top: 0; left: 0;
     z-index: 5;
